# ssgyms_logbook_parser

./: .pre-commit-config.yaml  README.md  app.py  bandit.yml  fly.toml  parsing_utils.py  pyproject.toml  requirements.txt  run_logbook_parser.py
templates/: base.html  output.html
